--- a/test/margin.html
+++ b/test/margin.html
@@ -34,16 +34,17 @@
             var nutsrg = topojson.feature(nuts, nuts.objects.nutsrg).features;
 
             //draw buffers
-            for(var i=0; i<=1; i+=0.2)
+            for(var i=1; i>=0; i-=0.2)
             (function(i){
-                var col = d3.interpolateBlues(i);
+                var dist = 200000;
+                var col = d3.interpolateBlues(1-i);
                 svg.append("g").selectAll("path").data(cnts)
                 .enter().append("path").attr("d", function (cnt) {
-                    return path(buffer(cnt.geometry, i*300000));
+                    return path(buffer(cnt.geometry, i*dist));
                 }).style("fill", col);
                 svg.append("g").selectAll("path").data(nutsrg)
                 .enter().append("path").attr("d", function (cnt) {
-                    return path(buffer(cnt.geometry, i*300000));
+                    return path(buffer(cnt.geometry, i*dist));
                 }).style("fill", col);
             })(i);
 
