--- a/test/margin.html
+++ b/test/margin.html
@@ -19,41 +19,39 @@
                 path = d3.geoPath().projection(d3.geoIdentity()
                     .reflectY(true).fitSize([width, height], topojson.feature(nuts, nuts.objects.gra)));
 
-            //jsts reader and writer
+            //jsts functions
             var reader = new jsts.io.GeoJSONReader();
             var writer = new jsts.io.GeoJSONWriter();
-            var buffer = function(geom, dist) {
+            var buffer = function (geom, dist) {
                 var buffer = reader.read(geom).buffer(dist);
-                    return writer.write(buffer);
+                return writer.write(buffer);
             };
 
-            //get data
+            //prepare data
             //country regions
             var cnts = topojson.feature(nuts, nuts.objects.cntrg).features;
             //NUTS regions
             var nutsrg = topojson.feature(nuts, nuts.objects.nutsrg).features;
 
-            //draw buffers
-            for(var i=1; i>=0; i-=0.2)
-            (function(i){
-                var dist = 200000;
-                var col = d3.interpolateBlues(1-i);
+            //draw coastal margin with JSTS buffer
+            var dist = 200000;
+            for (var i = 1; i >= 0; i -= 0.2) {
+                var col = d3.interpolateBlues(1 - i);
                 svg.append("g").selectAll("path").data(cnts)
-                .enter().append("path").attr("d", function (cnt) {
-                    return path(buffer(cnt.geometry, i*dist));
-                }).style("fill", col);
+                    .enter().append("path").attr("d", function (cnt) {
+                        return path(buffer(cnt.geometry, i * dist));
+                    }).style("fill", col);
                 svg.append("g").selectAll("path").data(nutsrg)
-                .enter().append("path").attr("d", function (cnt) {
-                    return path(buffer(cnt.geometry, i*dist));
-                }).style("fill", col);
-            })(i);
+                    .enter().append("path").attr("d", function (cnt) {
+                        return path(buffer(cnt.geometry, i * dist));
+                    }).style("fill", col);
+            }
 
+            //draw graticule
+            svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.gra).features)
+                .enter().append("path").attr("d", path).attr("class", "graticule");
 
-//draw graticule
-//svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.gra).features)
-//		.enter().append("path").attr("d", path).attr("class","graticule");
-
-        //draw regions
+            //draw regions
             //countries
             svg.append("g").selectAll("path").data(cnts)
                 .enter().append("path").attr("d", path).attr("class", "cntrg");
@@ -62,20 +60,19 @@
             svg.append("g").selectAll("path").data(nutsrg)
                 .enter().append("path").attr("d", path).attr("class", "nutsrg");
 
+            //draw boundaries
+            //countries
+            svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.cntbn).features)
+                .enter().append("path").attr("d", path)
+                .attr("class", function (bn) { return "cntbn" + (bn.properties.co === "T" ? " coastal" : ""); });
+            //nuts
+            svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsbn).features)
+                .enter().append("path").attr("d", path)
+                .attr("class", function (bn) {
+                    return "nutsbn" + (bn.properties.co === "T" ? " coastal" : "")
+                        + ((bn.properties.oth === "T" || bn.properties.lvl == 0) ? " white" : "")
+                        + (bn.properties.lvl == 3 ? " thin" : "");
+                });
 
-	//draw boundaries
-	//countries
-	svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.cntbn).features)
-		.enter().append("path").attr("d", path)
-		.attr("class",function(bn) { return "cntbn" + (bn.properties.co==="T"?" coastal":""); });
-	//nuts
-	svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsbn).features)
-		.enter().append("path").attr("d", path)
-		.attr("class",function(bn) {
-			return "nutsbn" + (bn.properties.co==="T"?" coastal":"")
-				+ ((bn.properties.oth==="T" || bn.properties.lvl==0)?" white":"")
-				+ (bn.properties.lvl==3?" thin":"");
-		});
-
-            });
+        });
 </script>
