--- a/experiments/margin2.html
+++ b/experiments/margin2.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <svg></svg>
-<link rel="stylesheet" type="text/css" href="style.css">
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/d3-request.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v3.min.js"></script>
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
+<style>
+    svg {
+        
+    }
+.cmarg {
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+.rg {
+    fill: #e9e9e9;
+}
+.rg:hover { 
+    fill: #ff7f00;
+}
+.bn {
+    fill: none;
+    stroke-width: 1px;
+    stroke: rgb(110, 110, 110);
+}
+</style>
+
+
 <script>
-    d3.json("https://raw.githubusercontent.com/eurostat/Nuts2json/master/2016/3035/60M/0.json",
+    d3.json("https://raw.githubusercontent.com/eurostat/Nuts2json/master/2016/3035/20M/0.json",
         function (error, nuts) {
             if (error) throw error;
 
@@ -19,49 +42,20 @@
                     .reflectY(true).fitSize([width, height], topojson.feature(nuts, nuts.objects.gra)));
 
             //draw coastal margin
-            for (var i = 1; i >= 0; i -= 0.1) {
-                var col = d3.interpolateBlues(1 - i);
-                var sw = i*140;
-                //countries
-                svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.cntbn).features)
-                    .enter().append("path").filter(function(bn){ return bn.properties.co === 'T'; }).attr("d", path)
-                    .style("fill","none")
-                    .style("stroke-width",sw+"px")
-                    .style("stroke",col)
-                    .style("stroke-linecap","round")
-                    .style("stroke-linejoin","round");
-                //nuts
+            for (var i = 1; i >= 0; i -= 0.1)
                 svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsbn).features)
-                    .enter().append("path").filter(function(bn){ return bn.properties.co === 'T'; }).attr("d", path)
-                    .style("fill","none")
-                    .style("stroke-width",sw+"px")
-                    .style("stroke",col)
-                    .style("stroke-linecap","round")
-                    .style("stroke-linejoin","round");
-            }
+                    .enter().append("path")/*.filter(function(bn){ return bn.properties.co === 'T'; })*/.attr("d", path)
+                    .attr("class", "cmarg")
+                    .style("stroke-width", (i*140)+"px")
+                    .style("stroke", d3.interpolateBlues(1 - i));
 
             //draw regions
-            //countries
-            svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.cntrg).features)
-                .enter().append("path").attr("d", path).attr("class", "cntrg");
-
-            //nuts
             svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsrg).features)
-                .enter().append("path").attr("d", path).attr("class", "nutsrg");
+                .enter().append("path").attr("d", path).attr("class", "rg");
 
             //draw boundaries
-            //countries
-            svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.cntbn).features)
-                .enter().append("path").attr("d", path)
-                .attr("class", function (bn) { return "cntbn" + (bn.properties.co === "T" ? " coastal" : ""); });
-            //nuts
             svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsbn).features)
-                .enter().append("path").attr("d", path)
-                .attr("class", function (bn) {
-                    return "nutsbn" + (bn.properties.co === "T" ? " coastal" : "")
-                        + ((bn.properties.oth === "T" || bn.properties.lvl == 0) ? " white" : "")
-                        + (bn.properties.lvl == 3 ? " thin" : "");
-                });
-
+                .enter().append("path").filter(function(bn){ return bn.properties.co === 'F'; }).attr("d", path)
+                .attr("class", "bn");
         });
 </script>
