--- a/experiments/margin2.html
+++ b/experiments/margin2.html
@@ -8,25 +8,25 @@
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
 <style>
-    svg {
-        
+    .cmarg {
+        fill: none;
+        stroke-linecap: round;
+        stroke-linejoin: round;
     }
-.cmarg {
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-}
-.rg {
-    fill: #e9e9e9;
-}
-.rg:hover { 
-    fill: #ff7f00;
-}
-.bn {
-    fill: none;
-    stroke-width: 1px;
-    stroke: rgb(110, 110, 110);
-}
+
+    .rg {
+        fill: #e9e9e9;
+    }
+
+    .rg:hover {
+        fill: #ff7f00;
+    }
+
+    .bn {
+        fill: none;
+        stroke-width: 1px;
+        stroke: rgb(75, 75, 75);
+    }
 </style>
 
 
@@ -46,16 +46,17 @@
                 svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsbn).features)
                     .enter().append("path")/*.filter(function(bn){ return bn.properties.co === 'T'; })*/.attr("d", path)
                     .attr("class", "cmarg")
-                    .style("stroke-width", (i*140)+"px")
-                    .style("stroke", d3.interpolateBlues(1 - i));
+                    .style("stroke-width", (i * 140) + "px")
+                    .style("stroke", d3.interpolateBlues(1-Math.sqrt(i)));
 
             //draw regions
             svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsrg).features)
-                .enter().append("path").attr("d", path).attr("class", "rg");
+                .enter().append("path").attr("d", path)
+                .attr("class", "rg");
 
             //draw boundaries
             svg.append("g").selectAll("path").data(topojson.feature(nuts, nuts.objects.nutsbn).features)
-                .enter().append("path").filter(function(bn){ return bn.properties.co === 'F'; }).attr("d", path)
+                .enter().append("path").filter(function (bn) { return bn.properties.co === 'F'; }).attr("d", path)
                 .attr("class", "bn");
         });
 </script>
