--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="dist/eurostat.js"></script>
-	<script>
+
+<script>
+	//test access through: https://cdn.jsdelivr.net/gh/eurostat/eurostat.js@0.9.16/js/eurostat.js
 
 	//load parameters from URL
 	var opts = EstLib.getURLParameters();
