--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="dist/eurostat-map-min.js"></script>
 
 <script>
-	//test access through: https://cdn.jsdelivr.net/gh/eurostat/eurostat.js@0.9.18/dist/eurostat.js
+	//test access through: https://cdn.jsdelivr.net/gh/eurostat/eurostat.js@0.9.19/dist/eurostat-map-min.js
 
 	//load parameters from URL
 	//var opts = EstLib.getURLParameters();
