--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 <body>
 	<svg id="map"></svg>
-
-	<script src="dist/eurostat-map-min.js"></script>
+	<script src="dist/eurostat-min.js"></script>
 
 <script>
 	//test access through: https://cdn.jsdelivr.net/gh/eurostat/eurostat.js@0.9.19/dist/eurostat-map-min.js
