--- a/index.html
+++ b/index.html
@@ -7,64 +7,174 @@
 </head>
 
 <body>
-	<svg id="map"></svg>
-	<script src="dist/eurostat-min.js"></script>
+<script src="dist/eurostat-min.js"></script>
+
+<svg id="mapdensity"></svg>
+<svg id="mapdensitydot"></svg>
+<svg id="mapdensitypropcircles"></svg>
+<svg id="mappopchange"></svg>
+<svg id="mapnutstypo"></svg>
 
 <script>
-	//test access through: https://cdn.jsdelivr.net/gh/eurostat/eurostat.js@0.9.19/dist/eurostat-map-min.js
 
-	//load parameters from URL
-	//var opts = EstLib.getURLParameters();
+EstLib.map()
+  .svgId("mapdensity")
+  .width(900)
+  .scale("10M")
+  .NUTSyear(2016)
+  .datasetCode("demo_r_d3dens")
+  .classifMethod("threshold")
+  .threshold([50, 75, 100, 150, 300, 850])
 
-	EstLib.map()
-	//.showLegend(false)
-	//.scaleExtent([1,2])
-	.scale("60M")
-	.width(800)
+  .unitText("people/km²")
+  .tooltipShowFlags(false)
 
-	//.nutsLvl(3).datasetCode("demo_r_d3dens")
-	//.nutsLvl(3).datasetCode("demo_r_gind3").filters({ indic_de:"GROWRT", time : 2016 })
-	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters({ age:"Y_GE15",sex:"T",unit:"PC", time : 2017 })
-	//.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
-	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
-	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
-	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
-
-	//.unitText("unit")
-	//.cntrgFillStyle("white")
-	//.seaFillStyle("#e9e9e9")
-	//.drawCoastalMargin(false)
-	//.coastalMarginStdDev(10)
-	//.coastalMarginWidth(10)
-	//.coastalMarginColor("#777")
-	//.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
-	//.clnb(14)
-	//.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
-	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
+  .legendTitleText("Population density (people/km²)")
+  .legendLabelDecNb(0)
+  .legendBoxHeight(210)
+  .legendBoxWidth(190)
+  .build()
 
 
-	/*
-	.NUTSyear(2013)
-	.nutsLvl(3).csvDataSource({url:"https://raw.githubusercontent.com/eurostat/eurostat.js/master/assets/data/urb_rur_typo.csv",geoCol:"NUTS_ID_2013",valueCol:"urban_rural"})
-	.classToFillStyleCH(EstLib.map.getFillPatternLegend())
-	.classToFillStyleCH(function(ecl){ return ecl==1?d3.schemeCategory10[3]:ecl==2?d3.schemeCategory10[1]:d3.schemeCategory10[2]; })
-	.classToFillStyleCT( { "urb":d3.schemeSet3[3], "int":d3.schemeSet3[5], "rur":d3.schemeSet3[6] } )
-	.classToText( { "urb":"Urban", "int":"Intermediate", "rur":"Rural" } )
-	.type("ct")*/
+EstLib.map()
+  .svgId("mapdensitydot")
+  .width(900)
+  .scale("60M")
+  .datasetCode("demo_r_d3dens")
+  .filters({ time: 2016 })
+  .classifMethod("threshold")
+  .threshold([35, 50, 80, 100, 140, 180, 300, 500, 1300])
 
-	//.psMaxSize(50)
-	//.legendBoxHeight(250)
-	//.legendBoxWidth(200)
-	//.legendLabelWrap(200)
-	//.classifMethod("threshold") //quantile equinter threshold
-	//.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
-	//.threshold([50,75,100,150,300,850])
-	//.legendLabelDecNb(0)
-	//.legendLabelDelimiter("to")
-	//.set(opts)
-	.build();
+  .filtersDefinitionFun(
+    EstLib.getFillPatternDefinitionFun({
+      patternSize: 5,
+      shape: "circle",
+      bckColor: "white",
+      symbColor: "black"
+    })
+  )
+  .classToFillStyleCH(EstLib.getFillPatternLegend())
+  .nutsbnStroke({
+    0: "#777",
+    1: "#777",
+    2: "#777",
+    3: "#777",
+    oth: "#444",
+    co: "#777"
+  })
+  .nutsbnStrokeWidth({ 0: 1, 1: 0.2, 2: 0.2, 3: 0.2, oth: 1, co: 1 })
+  .nutsrgSelectionFillStyle("darkblue")
 
-	</script>
+  .cntrgFillStyle("white")
+  .cntbnStroke({ def: "#777", co: "white" })
+
+  .seaFillStyle("#e9e9e9")
+  .coastalMarginColor("#777")
+  .coastalMarginStdDev(10)
+  .coastalMarginWidth(5)
+
+  .graticuleStroke("#888")
+
+  .unitText("people/km²")
+  .tooltipShowFlags(false)
+
+  .legendTitleText("Population density (people/km²)")
+  .legendLabelDecNb(0)
+  .legendBoxHeight(260)
+  .legendBoxWidth(190)
+
+  .build()
+
+
+EstLib.map()
+  .svgId("mapdensitypropcircles")
+  .scale("60M")
+  .width(900)
+  .datasetCode("demo_r_pjangrp3")
+  .filters({ age: "TOTAL", sex: "T", unit: "NR", time: 2016 })
+
+  .type("ps")
+  .psMaxSize(25)
+  .psStrokeWidth(0.3)
+
+  .unitText("inhabitants")
+  .tooltipShowFlags("long")
+
+  .legendTitleText("Population")
+  .legendLabelDecNb(0)
+  .legendBoxHeight(200)
+  .legendBoxWidth(140)
+
+  .build()
+
+
+EstLib.map()
+  .svgId("mappopchange")
+  .width(900)
+  .scale("60M")
+  .NUTSyear(2016)
+  .nutsLvl(3)
+  .datasetCode("demo_r_gind3")
+  .filters({ indic_de: "GROWRT", time: 2016 })
+
+  //.colorFun(d3.interpolateRdYlBu)
+  .classifMethod("threshold")
+  .threshold([-15, -10, -6, -4, -2, 0, 2, 4, 6, 10, 15])
+
+  .drawCoastalMargin(false)
+  .seaFillStyle("#333")
+  .nutsbnStroke({
+    0: "#777",
+    1: "#777",
+    2: "#777",
+    3: "#777",
+    oth: "#444",
+    co: "none"
+  })
+  .cntbnStroke({ def: "#777", co: "none" })
+  .drawGraticule(false)
+
+  .unitText("‰")
+  .tooltipShowFlags("long")
+  .bottomTextFill("white")
+
+  .legendTitleText("Population change from 2015 to 2016 (in ‰)")
+  .legendBoxWidth(200)
+  .legendBoxHeight(320)
+  .legendLabelDecNb(0)
+  .legendLabelDelimiter("to")
+
+  .build()
+
+
+EstLib.map()
+  .svgId("mapnutstypo")
+  .width(900)
+  .scale("60M")
+  .NUTSyear(2013)
+  .nutsLvl(3)
+  .csvDataSource({
+    url:
+      "https://raw.githubusercontent.com/eurostat/eurostat.js/master/assets/data/urb_rur_typo.csv",
+    geoCol: "NUTS_ID_2013",
+    valueCol: "urban_rural"
+  })
+
+  .type("ct")
+  .classToFillStyleCT({
+    urb: "#fdb462",
+    int: "#ffffb3",
+    rur: "#ccebc5"
+  })
+  .classToText({ urb: "Urban", int: "Intermediate", rur: "Rural" })
+
+  .legendLabelDecNb(0)
+  .legendBoxHeight(110)
+  .legendBoxWidth(130)
+
+  .build()
+
+</script>
 
 </body>
 
